# Rack

./: .gitignore  CMakeLists.txt  Core.json  Makefile  README.md  compile.mk  dep.mk  icon.icns  index.md  template.vcv
dep/: Makefile
include/: blendish.hpp  logger.hpp  settings.hpp  system.hpp  timer.hpp  window.hpp
include/app/: CableWidget.hpp  RackRail.hpp  common.hpp
include/simd/: sse_mathfun.h  vector.hpp
include/ui/: common.hpp
include/widget/: SvgWidget.hpp  Widget.hpp
plugins/: build.sh  logo.txt
src/: asset.cpp  blendish.cpp  dep.cpp  logger.cpp  main.cpp  settings.cpp  system.cpp  ui.cpp  window.cpp
src/app/: CableWidget.cpp  MenuBar.cpp  ModuleBrowser.cpp  ModuleWidget.cpp  PortWidget.cpp  RackRail.cpp  RackScrollWidget.cpp  RackWidget.cpp  Scene.cpp  SvgPanel.cpp
src/engine/: Engine.cpp
src/ui/: IconButton.cpp  MenuItem.cpp  MenuLabel.cpp  ScrollWidget.cpp  Slider.cpp
src/widget/: FramebufferWidget.cpp  SvgWidget.cpp  Widget.cpp
